[gd_scene load_steps=9 format=3 uid="uid://bfqrxfi45idh8"]

[ext_resource type="Texture2D" uid="uid://couhchf46wyld" path="res://Images/Assets/Sprites Magic Anim/Magic_0.png" id="1_5stei"]
[ext_resource type="Script" uid="uid://bxekcfh1hkkla" path="res://Scenes/Objects/MagicBullet/magic_bullet.gd" id="1_nilis"]
[ext_resource type="Texture2D" uid="uid://d2ba3tr6erqju" path="res://Images/Assets/Sprites Magic Anim/Magic_1.png" id="2_73140"]
[ext_resource type="Texture2D" uid="uid://b1ljuead2m6em" path="res://Images/Assets/Sprites Magic Anim/Magic_2.png" id="3_4k40j"]
[ext_resource type="Texture2D" uid="uid://b827juoyab4um" path="res://Images/Assets/Sprites Magic Anim/Magic_3.png" id="4_0c76m"]
[ext_resource type="AudioStream" uid="uid://d0ynyrg41me62" path="res://Sound/SFX/Arrow.wav" id="6_3oqld"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rx1ft"]
radius = 2.23607

[sub_resource type="SpriteFrames" id="SpriteFrames_vodvi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_5stei")
}, {
"duration": 1.0,
"texture": ExtResource("2_73140")
}, {
"duration": 1.0,
"texture": ExtResource("3_4k40j")
}, {
"duration": 1.0,
"texture": ExtResource("4_0c76m")
}],
"loop": false,
"name": &"Explode",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_73140")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[node name="MagicBullet" type="Area2D"]
collision_layer = 16
collision_mask = 5
script = ExtResource("1_nilis")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_rx1ft")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
sprite_frames = SubResource("SpriteFrames_vodvi")
animation = &"Explode"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.308

[node name="LifeSpan" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Explode" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_3oqld")
bus = &"SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="LifeSpan" to="." method="_on_lifespan_timeout"]
